# VidMeta-AI

./: README.md  app.py  config.toml  pyproject.toml  requirements.txt
vidmeta/: __init__.py  cli.py
