[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vidmeta"
version = "1.0.0"
description = "VidMeta AI — Analyze local videos and generate platform-ready metadata"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.35.0",
    "opencv-python-headless>=4.9.0",
    "Pillow>=10.0.0",
    "faster-whisper>=1.0.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "google-generativeai>=0.7.0",
    "requests>=2.31.0",
]

[project.scripts]
vidmeta = "vidmeta.cli:main"
